# syslink

./: components.d.ts  package.json  readme.md  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  main.rs  symlink.rs  utils.rs
src/parts/: file-select.vue  file-table.vue
src/store/: symlink_table.store.ts
