[package]
name = "syslink"
version = "0.0.0"
description = "软/硬链接管理工具"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = [ "dialog-open", "shell-open"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
rand = "0.8.5"
sled = { version = "0.34.7", features = ["compression"] }
chrono = "0.4.38"
rayon = "1.10.0"
walkdir = "2.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
